[tool.poetry]
name = "danger-py-cov"
version = "0.1.0"
description = ""
authors = ["Jakub Turek <jkbturek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
danger-python = {git = "https://github.com/turekj/python.git", rev = "plugin_infrastructure"}
flake8 = "^3.7.9"
pytest-watch = "^4.2.0"
pytest-cov = "^2.8.1"
black = "^19.10b0"
isort = "^4.3.21"
pylint = "^2.4.4"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
